# tap-to-pay

./: Anchor.toml  Cargo.toml  package-lock.json
frontend/tapguard-vault/: package-lock.json  package.json  tailwind.config.ts
frontend/tapguard-vault/src/: App.tsx  index.css  main.tsx
frontend/tapguard-vault/src/components/: MobileWalletHelper.tsx  Navbar.tsx
frontend/tapguard-vault/src/hooks/: useHaloChip.ts  useProgram.ts  useSolana.tsx
frontend/tapguard-vault/src/lib/: constants.ts  idl.ts  payload.ts  program.ts
frontend/tapguard-vault/src/lib/idl/: nfc_smart_vault.json  nfc_smart_vault.ts
frontend/tapguard-vault/src/pages/: Dashboard.tsx  FundVault.tsx  Index.tsx  Register.tsx  Settings.tsx  Setup.tsx  Tap.tsx
programs/lib/: lib.idl
programs/nfc_superteam/: Cargo.toml
programs/nfc_superteam/src/: lib.rs
programs/nfc_superteam3/: Cargo.toml
programs/nfc_superteam3/src/: lib.rs
relay/: keygen.js  keypair.json  package-lock.json  package.json  server.js
tests/: nfc_superteam.ts
